--- a/style.scss
+++ b/style.scss
@@ -13,15 +13,21 @@ body {
     align-items: center;
 }
 
-.text {
+.input-wrapper {
     display: flex;
     width: 50%;
+    margin-bottom: 50px;
+}
+
+input {
+   width: 100%; 
+   height: 50px;
 }
 
 .keyboard {
     display: flex;
     justify-content: center;
-    width: 81%;
+    width: 60%;
     border: 2px solid black;
     flex-direction: row;
     flex-wrap: wrap;
@@ -36,11 +42,12 @@ body {
     height: 35px;
     background-color: grey;
     border: 1px solid black;
-    transition: background-color 0.5s;
+    transition: background-color 0.5s, transform 0.5s;
 }
 
 .keyboard__key.active {
     background-color: cadetblue;
+    transform: scale(0.95);
 }
 
 .keyboard__value {
