--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-*{
+* {
     box-sizing: border-box;
 }
 
@@ -6,6 +6,7 @@ body {
     display: flex;
     align-items: center;
 }
+
 .main-container {
     display: flex;
     width: 100%;
@@ -20,8 +21,8 @@ body {
 }
 
 textarea {
-   width: 100%; 
-   height: 50px;
+    width: 100%;
+    height: 50px;
 }
 
 .keyboard {
@@ -43,6 +44,10 @@ textarea {
     background-color: grey;
     border: 1px solid black;
     transition: background-color 0.5s, transform 0.5s;
+}
+
+.keyboard__key_space {
+    width: 48.5%
 }
 
 .keyboard__key.active {
