--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inika&family=Inter:wght@400;700&family=Montserrat&display=swap');
+
+
 * {
     box-sizing: border-box;
 }
@@ -5,6 +8,8 @@
 body {
     display: flex;
     align-items: center;
+    font-family: 'Inika', serif;
+    background-color: #222831;
 }
 
 .main-container {
@@ -27,28 +32,67 @@ textarea {
 
 .keyboard {
     display: flex;
-    justify-content: center;
-    width: 60%;
+    // justify-content: center;
+    width: 49%;
     border: 2px solid black;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #393E46;
 }
 
 .keyboard__key {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 70px;
-    height: 35px;
-    background-color: grey;
+    border-radius: 5px;
+
+    width: 76px;
+    height: 42px;
+
+    width: 50px;
+    height: 50px;
+
+    background-color: #EEEEEE;
     border: 1px solid black;
     transition: background-color 0.5s, transform 0.5s;
 }
 
-.keyboard__key_space {
-    width: 48.5%
+.keyboard__key:hover {
+    // background-color: ;
 }
+
+.keyboard__key_space {
+    width: 43.5%;
+}
+
+.keyboard__key_tab {
+    width: 70px;
+}
+
+.keyboard__key_capslock,
+.keyboard__key_shift {
+    width: 85px;
+}
+
+.keyboard__key_ctrl {
+    width: 60px;
+}
+
+.keyboard__key_backspace {
+    width: 90px;
+}
+
+.keyboard__key_del {
+    width: 55px;
+}
+
+.keyboard__key_enter {
+    width: 80px;
+}
+
 
 .keyboard__key.active {
     background-color: cadetblue;
@@ -57,4 +101,5 @@ textarea {
 
 .keyboard__value {
     margin: 0;
+    color: #393E46;
 }
