--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ textarea {
   padding: 10px 10px 10px 20px;
   border-radius: 5px;
   background-color: #393E46;
+  font-weight: 600;
 }
 
 .keyboard__key {
