--- a/style.scss
+++ b/style.scss
@@ -62,6 +62,7 @@ textarea {
     background-color: #EEEEEE;
     border: 1px solid black;
     transition: background-color 0.5s, transform 0.5s, opacity 0.5s;
+    box-shadow: 0px 6px 6px black;
 }
 
 .keyboard__key:hover {
