--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,8 @@ body {
     justify-content: center;
     width: 50%;
     margin-bottom: 50px;
+    align-items: center;
+    flex-direction: column;
 }
 
 textarea {
@@ -101,6 +103,11 @@ textarea {
     width: 72px;
 }
 
+h5 {
+    color:#EEEEEE;
+    margin: 10px;
+    font-size: 16px;
+}
 
 .keyboard__key.active {
     background-color: #00ADB5;
